<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">


    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="invisible" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="vertical"
            android:background="#dedede">


            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/edtUsername"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                            android:drawablePadding="15dp"
                            android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                            android:hint="Username" />

                    </android.support.design.widget.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/firstNameWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/edtFirstName"
                                android:singleLine="true"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                                android:drawablePadding="15dp"
                                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                                android:hint="@string/FirstNameHint" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/lastNameWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/edtLastName"
                                android:singleLine="true"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                                android:drawablePadding="15dp"
                                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                                android:hint="@string/LastNameHint" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/emailWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/edtEmail"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_email_black_24dp"
                            android:drawablePadding="15dp"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:hint="@string/EmailHint" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/edtPassword"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_lock_black_24dp"
                            android:drawablePadding="15dp"
                            android:drawableStart="@drawable/ic_lock_black_24dp"
                            android:hint="@string/PasswordHint" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mobileNoWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/edtMobileNo"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"
                            android:drawablePadding="15dp"
                            android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
                            android:hint="@string/MobileNoHint" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/landlineNoWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/edtLndNo"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_phone_black_24dp"
                            android:drawablePadding="15dp"
                            android:drawableStart="@drawable/ic_phone_black_24dp"
                            android:hint="Landline Number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/birthdateWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/edtBirthdate"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_date_range_black_24dp"
                            android:drawablePadding="15dp"
                            android:drawableStart="@drawable/ic_date_range_black_24dp"
                            android:hint="dd/mm/yyyy" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:weightSum="2">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/iv"
                            android:layout_width="90dp"
                            android:layout_height="60dp"
                            android:src="@drawable/memberdefault"
                            app:civ_border_width="1px"
                            app:civ_border_color="#8db600"/>


                        <TextView
                            android:id="@+id/txtImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:text="Upload Photo Here..." />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btnSignUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#000000"
                            android:text="SIGN UP"
                            android:textColor="#fff" />


                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>